# phase-forensics

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/research/: 00_idea_origin.md  01_methodology.md  02_risks_and_mitigations.md  03_experiment_plan.md  04_related_work.md
docs/reviews/: dl_expert_review.md  engineer_review.md  professor_review.md
logs/conversations/: 2026-03-20.md
scripts/: pilot_study.py
src/: __init__.py  coherence_metrics.py  config.py  detector.py  phase_extraction.py  statistical_detection.py
tests/: conftest.py  test_coherence_metrics.py  test_detector.py  test_phase_extraction.py  test_statistical_detection.py
